hphp/hack/test/typecheck/unset_function.php.exp
File "unset_function.php", line 8, characters 3-19:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
File "unset_function.php", line 8, characters 9-17:
Array updates cannot be applied to function results. Use a local variable instead. (Typing[4454])
File "unset_function.php", line 9, characters 3-28:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
  File "unset_function.php", line 3, characters 21-38:
  This is an object of type Map<string, mixed>
File "unset_function.php", line 9, characters 9-17:
Array updates cannot be applied to function results. Use a local variable instead. (Typing[4454])
